Added patch job handler.
